--- a/index.html
+++ b/index.html
@@ -5,66 +5,117 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>配方管理系統</title>
 
+  <!-- Vue 3 CDN -->
+  <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+
+  <!-- Element Plus CDN -->
+  <link rel="stylesheet" href="https://unpkg.com/element-plus/dist/index.css" />
+  <script src="https://unpkg.com/element-plus/dist/index.full.js"></script>
+
+  <!-- Element Plus Icons -->
+  <script src="https://unpkg.com/@element-plus/icons-vue"></script>
+
   <style>
-    /* Reset body */
     body, html {
       margin: 0;
-      padding: 0;
       height: 100%;
       font-family: Arial, sans-serif;
     }
-
-    /* 導覽列 */
-    .navbar {
-      width: 100%;
-      height: 60px;
-      background-color: #2c3e50;
-      color: white;
+    #app {
       display: flex;
-      align-items: center;
-      padding: 0 20px;
+      height: 100%;
+    }
+    /* 左側功能列 */
+    .sidebar {
+      width: 250px;
+      background-color: #f5f5f5;
+      padding: 10px;
       box-sizing: border-box;
+      overflow-y: auto;
     }
-
-    .navbar h1 {
-      margin: 0;
-      font-size: 20px;
+    /* 中間內容 */
+    .content {
+      flex: 1;
+      height: 100%;
     }
-
-    /* iframe 區塊 */
-    .iframe-container {
-      width: 100%;
-      height: calc(100% - 60px); /* 減掉導覽列高度 */
-    }
-
-    .iframe-container iframe {
+    .content iframe {
       width: 100%;
       height: 100%;
       border: none;
     }
-
-    /* 手機版調整 */
-    @media (max-width: 768px) {
-      .navbar h1 {
-        font-size: 16px;
-      }
-    }
   </style>
 </head>
 <body>
-
-  <!-- 導覽列 -->
-  <div class="navbar">
-    <h1>佳咊配方管理系統</h1>
+<div id="app">
+  <!-- 功能列 -->
+  <div class="sidebar">
+    <el-menu
+      default-active="2"
+      class="el-menu-vertical-demo"
+      @open="handleOpen"
+      @close="handleClose"
+    >
+      <el-sub-menu index="1">
+        <template #title>
+          <el-icon><location /></el-icon>
+          <span>Navigator One</span>
+        </template>
+        <el-menu-item-group title="Group One">
+          <el-menu-item index="1-1">item one</el-menu-item>
+          <el-menu-item index="1-2">item two</el-menu-item>
+        </el-menu-item-group>
+        <el-menu-item-group title="Group Two">
+          <el-menu-item index="1-3">item three</el-menu-item>
+        </el-menu-item-group>
+        <el-sub-menu index="1-4">
+          <template #title>item four</template>
+          <el-menu-item index="1-4-1">item one</el-menu-item>
+        </el-sub-menu>
+      </el-sub-menu>
+      <el-menu-item index="2">
+        <el-icon><icon-menu /></el-icon>
+        <span>Navigator Two</span>
+      </el-menu-item>
+      <el-menu-item index="3" disabled>
+        <el-icon><document /></el-icon>
+        <span>Navigator Three</span>
+      </el-menu-item>
+      <el-menu-item index="4">
+        <el-icon><setting /></el-icon>
+        <span>Navigator Four</span>
+      </el-menu-item>
+    </el-menu>
   </div>
 
-  <!-- iframe 內嵌 Streamlit App -->
-  <div class="iframe-container">
-    <iframe 
-      src="https://color-powder-app.streamlit.app/#recipe-table"
-      title="配方管理系統"
-    ></iframe>
+  <!-- 中間內容區 -->
+  <div class="content">
+    <iframe src="https://color-powder-app.streamlit.app/#recipe-table"></iframe>
   </div>
+</div>
 
+<script>
+  const { createApp } = Vue;
+  const Icons = ElementPlusIconsVue;
+
+  const app = createApp({
+    setup() {
+      const handleOpen = (key, keyPath) => {
+        console.log("open:", key, keyPath);
+      };
+      const handleClose = (key, keyPath) => {
+        console.log("close:", key, keyPath);
+      };
+      return { handleOpen, handleClose };
+    }
+  });
+
+  // 註冊所有 Element Plus Icons
+  for (const [key, component] of Object.entries(Icons)) {
+    app.component(key, component);
+  }
+
+  app.use(ElementPlus);
+  app.mount("#app");
+</script>
 </body>
 </html>
