--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>配方管理系統</title>
+  <title>佳咊配方管理系統</title>
 
   <!-- Vue 3 CDN -->
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
@@ -21,10 +21,32 @@
       height: 100%;
       font-family: Arial, sans-serif;
     }
+
     #app {
       display: flex;
+      flex-direction: column;
       height: 100%;
     }
+
+    /* 頂部抬頭 */
+    .header {
+      height: 60px;
+      background-color: #2c3e50;
+      color: white;
+      display: flex;
+      align-items: center;
+      padding: 0 20px;
+      font-size: 20px;
+      box-sizing: border-box;
+    }
+
+    /* 主體區域 */
+    .main {
+      display: flex;
+      flex: 1;
+      overflow: hidden;
+    }
+
     /* 左側功能列 */
     .sidebar {
       width: 250px;
@@ -33,11 +55,13 @@
       box-sizing: border-box;
       overflow-y: auto;
     }
-    /* 中間內容 */
+
+    /* 右側 iframe */
     .content {
       flex: 1;
       height: 100%;
     }
+
     .content iframe {
       width: 100%;
       height: 100%;
@@ -47,75 +71,100 @@
 </head>
 <body>
 <div id="app">
-  <!-- 功能列 -->
-  <div class="sidebar">
-    <el-menu
-      default-active="2"
-      class="el-menu-vertical-demo"
-      @open="handleOpen"
-      @close="handleClose"
-    >
-      <el-sub-menu index="1">
-        <template #title>
-          <el-icon><location /></el-icon>
-          <span>Navigator One</span>
-        </template>
-        <el-menu-item-group title="Group One">
-          <el-menu-item index="1-1">item one</el-menu-item>
-          <el-menu-item index="1-2">item two</el-menu-item>
-        </el-menu-item-group>
-        <el-menu-item-group title="Group Two">
-          <el-menu-item index="1-3">item three</el-menu-item>
-        </el-menu-item-group>
-        <el-sub-menu index="1-4">
-          <template #title>item four</template>
-          <el-menu-item index="1-4-1">item one</el-menu-item>
-        </el-sub-menu>
-      </el-sub-menu>
-      <el-menu-item index="2">
-        <el-icon><icon-menu /></el-icon>
-        <span>Navigator Two</span>
-      </el-menu-item>
-      <el-menu-item index="3" disabled>
-        <el-icon><document /></el-icon>
-        <span>Navigator Three</span>
-      </el-menu-item>
-      <el-menu-item index="4">
-        <el-icon><setting /></el-icon>
-        <span>Navigator Four</span>
-      </el-menu-item>
-    </el-menu>
+  <!-- 頂部抬頭 -->
+  <div class="header">
+    佳咊配方管理系統
   </div>
 
-  <!-- 中間內容區 -->
-  <div class="content">
-    <iframe src="https://color-powder-app.streamlit.app/#recipe-table"></iframe>
+  <!-- 主體區域 -->
+  <div class="main">
+    <!-- 左側選單 -->
+    <div class="sidebar">
+      <el-menu
+        default-active="1-1"
+        class="el-menu-vertical-demo"
+        @select="handleSelect"
+      >
+        <el-sub-menu index="1">
+          <template #title>色粉管理</template>
+          <el-menu-item index="1-1">色粉管理</el-menu-item>
+        </el-sub-menu>
+
+        <el-menu-item index="2">客戶</el-menu-item>
+
+        <el-sub-menu index="3">
+          <template #title>配方管理</template>
+          <el-menu-item index="3-1">客戶名單</el-menu-item>
+          <el-menu-item index="3-2">配方管理</el-menu-item>
+        </el-sub-menu>
+
+        <el-sub-menu index="4">
+          <template #title>生產管理</template>
+          <el-menu-item index="4-1">生產單</el-menu-item>
+          <el-menu-item index="4-2">生產單修改</el-menu-item>
+          <el-menu-item index="4-3">代工排程</el-menu-item>
+        </el-sub-menu>
+
+        <el-sub-menu index="5">
+          <template #title>庫存管理</template>
+          <el-menu-item index="5-1">期初庫存</el-menu-item>
+          <el-menu-item index="5-2">用量查詢/排行榜</el-menu-item>
+          <el-menu-item index="5-3">庫存查詢</el-menu-item>
+        </el-sub-menu>
+
+        <el-menu-item index="6">採購管理</el-menu-item>
+        <el-menu-item index="7">銷售管理</el-menu-item>
+        <el-menu-item index="8">會計系統</el-menu-item>
+        <el-menu-item index="9">人力資源</el-menu-item>
+      </el-menu>
+    </div>
+
+    <!-- 右側 iframe -->
+    <div class="content">
+      <iframe :src="iframeUrl" title="配方管理系統"></iframe>
+    </div>
   </div>
 </div>
 
 <script>
-  const { createApp } = Vue;
-  const Icons = ElementPlusIconsVue;
+const { createApp, ref } = Vue;
+const Icons = ElementPlusIconsVue;
 
-  const app = createApp({
-    setup() {
-      const handleOpen = (key, keyPath) => {
-        console.log("open:", key, keyPath);
-      };
-      const handleClose = (key, keyPath) => {
-        console.log("close:", key, keyPath);
-      };
-      return { handleOpen, handleClose };
-    }
-  });
+const app = createApp({
+  setup() {
+    const iframeUrl = ref('https://color-powder-app.streamlit.app/#recipe-table');
 
-  // 註冊所有 Element Plus Icons
-  for (const [key, component] of Object.entries(Icons)) {
-    app.component(key, component);
+    const handleSelect = (index) => {
+      switch(index){
+        case '1-1': iframeUrl.value = 'https://color-powder-app.streamlit.app/#color-powder'; break;
+        case '2':   iframeUrl.value = 'https://color-powder-app.streamlit.app/#customer'; break;
+        case '3-1': iframeUrl.value = 'https://color-powder-app.streamlit.app/#customer-list'; break;
+        case '3-2': iframeUrl.value = 'https://color-powder-app.streamlit.app/#recipe'; break;
+        case '4-1': iframeUrl.value = 'https://color-powder-app.streamlit.app/#production-order'; break;
+        case '4-2': iframeUrl.value = 'https://color-powder-app.streamlit.app/#production-edit'; break;
+        case '4-3': iframeUrl.value = 'https://color-powder-app.streamlit.app/#outsourcing'; break;
+        case '5-1': iframeUrl.value = 'https://color-powder-app.streamlit.app/#initial-stock'; break;
+        case '5-2': iframeUrl.value = 'https://color-powder-app.streamlit.app/#usage-ranking'; break;
+        case '5-3': iframeUrl.value = 'https://color-powder-app.streamlit.app/#inventory'; break;
+        case '6': iframeUrl.value = 'https://color-powder-app.streamlit.app/#purchase'; break;
+        case '7': iframeUrl.value = 'https://color-powder-app.streamlit.app/#sales'; break;
+        case '8': iframeUrl.value = 'https://color-powder-app.streamlit.app/#accounting'; break;
+        case '9': iframeUrl.value = 'https://color-powder-app.streamlit.app/#hr'; break;
+        default: iframeUrl.value = 'https://color-powder-app.streamlit.app/#recipe-table';
+      }
+    };
+
+    return { iframeUrl, handleSelect };
   }
+});
 
-  app.use(ElementPlus);
-  app.mount("#app");
+// 註冊 Element Plus Icons
+for (const [key, component] of Object.entries(Icons)) {
+  app.component(key, component);
+}
+
+app.use(ElementPlus);
+app.mount('#app');
 </script>
 </body>
 </html>
