--- a/index.html
+++ b/index.html
@@ -89,9 +89,7 @@
           <template #title>色粉管理</template>
           <el-menu-item index="1-1">色粉管理</el-menu-item>
         </el-sub-menu>
-
-        <el-menu-item index="2">客戶</el-menu-item>
-
+        
         <el-sub-menu index="3">
           <template #title>配方管理</template>
           <el-menu-item index="3-1">客戶名單</el-menu-item>
@@ -100,16 +98,12 @@
 
         <el-sub-menu index="4">
           <template #title>生產管理</template>
-          <el-menu-item index="4-1">生產單</el-menu-item>
-          <el-menu-item index="4-2">生產單修改</el-menu-item>
-          <el-menu-item index="4-3">代工排程</el-menu-item>
+          <el-menu-item index="4-1">生產單新增及修改</el-menu-item>
+          <el-menu-item index="4-2">代工排程</el-menu-item>
         </el-sub-menu>
 
         <el-sub-menu index="5">
           <template #title>庫存管理</template>
-          <el-menu-item index="5-1">期初庫存</el-menu-item>
-          <el-menu-item index="5-2">用量查詢/排行榜</el-menu-item>
-          <el-menu-item index="5-3">庫存查詢</el-menu-item>
         </el-sub-menu>
 
         <el-menu-item index="6">採購管理</el-menu-item>
