--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <title>Color Powder 系統</title>
 
-  <!-- Element Plus + Vue -->
   <link rel="stylesheet" href="https://unpkg.com/element-plus/dist/index.css">
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
   <script src="https://unpkg.com/element-plus/dist/index.full.js"></script>
@@ -13,41 +12,16 @@
   <style>
     body { margin: 0; font-family: Arial, sans-serif; }
     #app { display: flex; height: 100vh; }
-    .menu {
-      width: 240px;
-      background: #1f2d3d;
-      color: white;
-      transition: width .3s;
-    }
-    .menu.collapsed {
-      width: 70px;
-    }
-    iframe {
-      flex: 1;
-      border: none;
-    }
-    .menu-header {
-      height: 60px;
-      display: flex;
-      align-items: center;
-      padding-left: 16px;
-      font-size: 20px;
-      color: #fff;
-      border-bottom: 1px solid #3a4750;
-    }
-    .collapse-btn {
-      position: absolute;
-      right: 10px;
-      top: 15px;
-      cursor: pointer;
-      color: #fff;
-    }
+    .menu { width: 240px; background: #1f2d3d; color: white; transition: width .3s; }
+    .menu.collapsed { width: 70px; }
+    iframe { flex: 1; border: none; }
+    .menu-header { height: 60px; display: flex; align-items: center; padding-left: 16px; font-size: 20px; color: #fff; border-bottom: 1px solid #3a4750; }
+    .collapse-btn { position: absolute; right: 10px; top: 15px; cursor: pointer; color: #fff; }
   </style>
 </head>
 
 <body>
 <div id="app">
-  
   <!-- 左側選單 -->
   <div :class="['menu', isCollapse ? 'collapsed' : '']">
     <div class="menu-header">
@@ -57,67 +31,39 @@
       </span>
     </div>
 
-    <el-menu
-      :collapse="isCollapse"
-      background-color="#1f2d3d"
-      text-color="#fff"
-      active-text-color="#ffd04b"
-      @select="handleSelect"
-    >
-      <!-- 色粉管理 -->
+    <el-menu :collapse="isCollapse" background-color="#1f2d3d" text-color="#fff" active-text-color="#ffd04b" @select="handleSelect">
       <el-sub-menu index="1">
-        <template #title>
-          <el-icon><Brush /></el-icon>
-          <span>色粉管理</span>
-        </template>
+        <template #title><el-icon><Brush /></el-icon><span>色粉管理</span></template>
         <el-menu-item index="1-1">色粉管理</el-menu-item>
       </el-sub-menu>
 
-      <!-- 配方管理 -->
       <el-sub-menu index="2">
-        <template #title>
-          <el-icon><Folder /></el-icon>
-          <span>配方管理</span>
-        </template>
+        <template #title><el-icon><Folder /></el-icon><span>配方管理</span></template>
         <el-menu-item index="2-1">客戶名單</el-menu-item>
         <el-menu-item index="2-2">配方管理</el-menu-item>
       </el-sub-menu>
 
-      <!-- 生產管理 -->
       <el-sub-menu index="3">
-        <template #title>
-          <el-icon><Document /></el-icon>
-          <span>生產管理</span>
-        </template>
+        <template #title><el-icon><Document /></el-icon><span>生產管理</span></template>
         <el-menu-item index="3-1">生產單</el-menu-item>
         <el-menu-item index="3-2">代工排程</el-menu-item>
       </el-sub-menu>
 
-      <!-- 庫存管理 -->
       <el-sub-menu index="4">
-        <template #title>
-          <el-icon><Box /></el-icon>
-          <span>庫存管理</span>
-        </template>
+        <template #title><el-icon><Box /></el-icon><span>庫存管理</span></template>
         <el-menu-item index="4-1">庫存區</el-menu-item>
       </el-sub-menu>
 
-      <!-- 查詢區 -->
       <el-sub-menu index="5">
-        <template #title>
-          <el-icon><Search /></el-icon>
-          <span>查詢區</span>
-        </template>
+        <template #title><el-icon><Search /></el-icon><span>查詢區</span></template>
         <el-menu-item index="5-1">Pantone 色號表</el-menu-item>
         <el-menu-item index="5-2">交叉查詢區</el-menu-item>
       </el-sub-menu>
-
     </el-menu>
   </div>
 
   <!-- 右側內容 iframe -->
-  <iframe id="appFrame" :src="iframeUrl"></iframe>
-
+  <iframe id="appFrame" name="appFrame" src="https://color-powder-app.streamlit.app/"></iframe>
 </div>
 
 <script>
@@ -128,24 +74,23 @@ createApp({
   components: { Brush, Folder, Document, Box, Search, ArrowLeftBold, ArrowRightBold },
 
   setup() {
-    const iframeUrl = ref("https://color-powder-app.streamlit.app/?tab=recipe");
+    const iframeUrl = ref("https://color-powder-app.streamlit.app/");
     const isCollapse = ref(false);
 
     const handleSelect = (index) => {
+      // 將選單事件發送給 iframe 內的 Streamlit App
+      let tabName = "";
       switch(index){
-        case "1-1": iframeUrl.value = "https://color-powder-app.streamlit.app/?tab=color-powder"; break;
-
-        case "2-1": iframeUrl.value = "https://color-powder-app.streamlit.app/?tab=customer-list"; break;
-        case "2-2": iframeUrl.value = "https://color-powder-app.streamlit.app/?tab=recipe"; break;
-
-        case "3-1": iframeUrl.value = "https://color-powder-app.streamlit.app/?tab=production-order"; break;
-        case "3-2": iframeUrl.value = "https://color-powder-app.streamlit.app/?tab=outsourcing"; break;
-
-        case "4-1": iframeUrl.value = "https://color-powder-app.streamlit.app/?tab=inventory"; break;
-
-        case "5-1": iframeUrl.value = "https://color-powder-app.streamlit.app/?tab=pantone-table"; break;
-        case "5-2": iframeUrl.value = "https://color-powder-app.streamlit.app/?tab=cross-query"; break;
+        case "1-1": tabName="color-powder"; break;
+        case "2-1": tabName="customer"; break;
+        case "2-2": tabName="recipe"; break;
+        case "3-1": tabName="production-order"; break;
+        case "3-2": tabName="outsourcing"; break;
+        case "4-1": tabName="inventory"; break;
+        case "5-1": tabName="pantone-table"; break;
+        case "5-2": tabName="cross-query"; break;
       }
+      window.frames["appFrame"].contentWindow.postMessage({tab: tabName}, "*");
     };
 
     return { iframeUrl, handleSelect, isCollapse };
