--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Color Powder 系統</title>
 
+  <!-- Element Plus + Vue -->
   <link rel="stylesheet" href="https://unpkg.com/element-plus/dist/index.css">
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
   <script src="https://unpkg.com/element-plus/dist/index.full.js"></script>
@@ -11,12 +12,31 @@
 
   <style>
     body { margin: 0; font-family: Arial, sans-serif; }
-    #app { display: flex; height: 100vh; }
-    .menu { width: 240px; background: #1f2d3d; color: white; transition: width .3s; }
+    #app { display: flex; height: 100vh; overflow: hidden; }
+    .menu {
+      width: 240px;
+      background: #1f2d3d;
+      color: white;
+      transition: width .3s;
+      flex-shrink: 0;
+      overflow-y: auto;
+    }
     .menu.collapsed { width: 70px; }
-    iframe { flex: 1; border: none; }
-    .menu-header { height: 60px; display: flex; align-items: center; padding-left: 16px; font-size: 20px; color: #fff; border-bottom: 1px solid #3a4750; }
+    iframe { flex: 1; border: none; height: 100vh; }
+
+    .menu-header {
+      height: 60px;
+      display: flex;
+      align-items: center;
+      padding-left: 16px;
+      font-size: 20px;
+      color: #fff;
+      border-bottom: 1px solid #3a4750;
+      position: relative;
+    }
     .collapse-btn { position: absolute; right: 10px; top: 15px; cursor: pointer; color: #fff; }
+    .el-menu { border-right: none; }
+    .el-menu-item, .el-sub-menu__title { font-size: 16px; }
   </style>
 </head>
 
@@ -31,39 +51,75 @@
       </span>
     </div>
 
-    <el-menu :collapse="isCollapse" background-color="#1f2d3d" text-color="#fff" active-text-color="#ffd04b" @select="handleSelect">
+    <el-menu
+      :collapse="isCollapse"
+      background-color="#1f2d3d"
+      text-color="#fff"
+      active-text-color="#ffd04b"
+      @select="handleSelect"
+    >
+      <!-- 色粉管理 -->
       <el-sub-menu index="1">
-        <template #title><el-icon><Brush /></el-icon><span>色粉管理</span></template>
+        <template #title>
+          <el-icon><Brush /></el-icon>
+          <span>色粉管理</span>
+        </template>
         <el-menu-item index="1-1">色粉管理</el-menu-item>
       </el-sub-menu>
 
+      <!-- 配方管理 -->
       <el-sub-menu index="2">
-        <template #title><el-icon><Folder /></el-icon><span>配方管理</span></template>
+        <template #title>
+          <el-icon><Folder /></el-icon>
+          <span>配方管理</span>
+        </template>
         <el-menu-item index="2-1">客戶名單</el-menu-item>
         <el-menu-item index="2-2">配方管理</el-menu-item>
       </el-sub-menu>
 
+      <!-- 生產管理 -->
       <el-sub-menu index="3">
-        <template #title><el-icon><Document /></el-icon><span>生產管理</span></template>
+        <template #title>
+          <el-icon><Document /></el-icon>
+          <span>生產管理</span>
+        </template>
         <el-menu-item index="3-1">生產單</el-menu-item>
         <el-menu-item index="3-2">代工排程</el-menu-item>
       </el-sub-menu>
 
+      <!-- 庫存管理 -->
       <el-sub-menu index="4">
-        <template #title><el-icon><Box /></el-icon><span>庫存管理</span></template>
+        <template #title>
+          <el-icon><Box /></el-icon>
+          <span>庫存管理</span>
+        </template>
         <el-menu-item index="4-1">庫存區</el-menu-item>
       </el-sub-menu>
 
+      <!-- 查詢區 -->
       <el-sub-menu index="5">
-        <template #title><el-icon><Search /></el-icon><span>查詢區</span></template>
+        <template #title>
+          <el-icon><Search /></el-icon>
+          <span>查詢區</span>
+        </template>
         <el-menu-item index="5-1">Pantone 色號表</el-menu-item>
         <el-menu-item index="5-2">交叉查詢區</el-menu-item>
       </el-sub-menu>
+
+      <!-- 備份區 -->
+      <el-sub-menu index="6">
+        <template #title>
+          <el-icon><Document /></el-icon>
+          <span>備份區</span>
+        </template>
+        <el-menu-item index="6-1">匯入備份</el-menu-item>
+      </el-sub-menu>
+
     </el-menu>
   </div>
 
   <!-- 右側內容 iframe -->
-  <iframe id="appFrame" name="appFrame" src="https://color-powder-app.streamlit.app/"></iframe>
+  <iframe id="appFrame" :src="iframeUrl"></iframe>
 </div>
 
 <script>
@@ -74,29 +130,29 @@ createApp({
   components: { Brush, Folder, Document, Box, Search, ArrowLeftBold, ArrowRightBold },
 
   setup() {
-    const iframeUrl = ref("https://color-powder-app.streamlit.app/");
+    const iframeUrl = ref("https://color-powder-app.streamlit.app/#recipe-create");
     const isCollapse = ref(false);
 
     const handleSelect = (index) => {
-      // 將選單事件發送給 iframe 內的 Streamlit App
-      let tabName = "";
+      let tabHash = "";
       switch(index){
-        case "1-1": tabName="color-powder"; break;
-        case "2-1": tabName="customer"; break;
-        case "2-2": tabName="recipe"; break;
-        case "3-1": tabName="production-order"; break;
-        case "3-2": tabName="outsourcing"; break;
-        case "4-1": tabName="inventory"; break;
-        case "5-1": tabName="pantone-table"; break;
-        case "5-2": tabName="cross-query"; break;
+        case "1-1": tabHash = "#color-powder"; break;
+        case "2-1": tabHash = "#customer"; break;
+        case "2-2": tabHash = "#recipe-create"; break;
+        case "3-1": tabHash = "#production-order"; break;
+        case "3-2": tabHash = "#outsourcing"; break;
+        case "4-1": tabHash = "#inventory"; break;
+        case "5-1": tabHash = "#pantone-table"; break;
+        case "5-2": tabHash = "#cross-query"; break;
+        case "6-1": tabHash = "#backup"; break;
       }
-      window.frames["appFrame"].contentWindow.postMessage({tab: tabName}, "*");
+      const iframe = document.getElementById("appFrame");
+      iframe.contentWindow.location.hash = tabHash;
     };
 
     return { iframeUrl, handleSelect, isCollapse };
   }
 }).mount("#app");
 </script>
-
 </body>
 </html>
