--- a/index.html
+++ b/index.html
@@ -2,80 +2,169 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8">
-  <title>Color Powder 系統</title>
-  <link rel="stylesheet" href="https://unpkg.com/element-plus/dist/index.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>佳咊配方管理系統</title>
+
+  <!-- Vue 3 CDN -->
   <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+
+  <!-- Element Plus CDN -->
+  <link rel="stylesheet" href="https://unpkg.com/element-plus/dist/index.css" />
   <script src="https://unpkg.com/element-plus/dist/index.full.js"></script>
+
+  <!-- Element Plus Icons -->
+  <script src="https://unpkg.com/@element-plus/icons-vue"></script>
+
   <style>
-    body { margin: 0; font-family: Arial, sans-serif; }
-    #app { display: flex; height: 100vh; }
-    .menu { width: 220px; background: #2c3e50; color: white; }
-    iframe { flex: 1; border: none; }
+    body, html {
+      margin: 0;
+      height: 100%;
+      font-family: Arial, sans-serif;
+    }
+
+    #app {
+      display: flex;
+      flex-direction: column;
+      height: 100%;
+    }
+
+    /* 頂部抬頭 */
+    .header {
+      height: 60px;
+      background-color: #2c3e50;
+      color: white;
+      display: flex;
+      align-items: center;
+      padding: 0 20px;
+      font-size: 20px;
+      box-sizing: border-box;
+    }
+
+    /* 主體區域 */
+    .main {
+      display: flex;
+      flex: 1;
+      overflow: hidden;
+    }
+
+    /* 左側功能列 */
+    .sidebar {
+      width: 250px;
+      background-color: #f5f5f5;
+      padding: 10px;
+      box-sizing: border-box;
+      overflow-y: auto;
+    }
+
+    /* 右側 iframe */
+    .content {
+      flex: 1;
+      height: 100%;
+    }
+
+    .content iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
   </style>
 </head>
 <body>
 <div id="app">
-  <div class="menu">
-    <el-menu
-      default-active="1-1"
-      @select="handleSelect"
-      background-color="#2c3e50"
-      text-color="#fff"
-      active-text-color="#ffd04b"
-      class="el-menu-vertical-demo"
-    >
-      <el-sub-menu index="1">
-        <template #title>色粉管理</template>
-        <el-menu-item index="1-1">色粉管理</el-menu-item>
-      </el-sub-menu>
-      <el-sub-menu index="2">
-        <template #title>配方管理</template>
-        <el-menu-item index="2-1">客戶名單</el-menu-item>
-        <el-menu-item index="2-2">配方管理</el-menu-item>
-      </el-sub-menu>
-      <el-sub-menu index="3">
-        <template #title>生產管理</template>
-        <el-menu-item index="3-1">生產單</el-menu-item>
-        <el-menu-item index="3-2">代工排程</el-menu-item>
-      </el-sub-menu>
-      <el-sub-menu index="4">
-        <template #title>庫存管理</template>
-        <el-menu-item index="4-1">庫存區</el-menu-item>
-      </el-sub-menu>
-      <el-sub-menu index="5">
-        <template #title>查詢區</template>
-        <el-menu-item index="5-1">Pantone色號表</el-menu-item>
-        <el-menu-item index="5-2">交叉查詢區</el-menu-item>
-      </el-sub-menu>
-    </el-menu>
+  <!-- 頂部抬頭 -->
+  <div class="header">
+    佳咊配方管理系統
   </div>
-  
-  <iframe id="appFrame" :src="iframeUrl"></iframe>
+
+  <!-- 主體區域 -->
+  <div class="main">
+    <!-- 左側選單 -->
+    <div class="sidebar">
+      <el-menu
+        default-active="1-1"
+        class="el-menu-vertical-demo"
+        @select="handleSelect"
+      >
+        <el-sub-menu index="1">
+          <template #title>色粉管理</template>
+          <el-menu-item index="1-1">色粉管理</el-menu-item>
+        </el-sub-menu>
+
+        <el-menu-item index="2">客戶</el-menu-item>
+
+        <el-sub-menu index="3">
+          <template #title>配方管理</template>
+          <el-menu-item index="3-1">客戶名單</el-menu-item>
+          <el-menu-item index="3-2">配方管理</el-menu-item>
+        </el-sub-menu>
+
+        <el-sub-menu index="4">
+          <template #title>生產管理</template>
+          <el-menu-item index="4-1">生產單</el-menu-item>
+          <el-menu-item index="4-2">生產單修改</el-menu-item>
+          <el-menu-item index="4-3">代工排程</el-menu-item>
+        </el-sub-menu>
+
+        <el-sub-menu index="5">
+          <template #title>庫存管理</template>
+          <el-menu-item index="5-1">期初庫存</el-menu-item>
+          <el-menu-item index="5-2">用量查詢/排行榜</el-menu-item>
+          <el-menu-item index="5-3">庫存查詢</el-menu-item>
+        </el-sub-menu>
+
+        <el-menu-item index="6">採購管理</el-menu-item>
+        <el-menu-item index="7">銷售管理</el-menu-item>
+        <el-menu-item index="8">會計系統</el-menu-item>
+        <el-menu-item index="9">人力資源</el-menu-item>
+      </el-menu>
+    </div>
+
+    <!-- 右側 iframe -->
+    <div class="content">
+      <iframe :src="iframeUrl" title="配方管理系統"></iframe>
+    </div>
+  </div>
 </div>
 
 <script>
 const { createApp, ref } = Vue;
-createApp({
+const Icons = ElementPlusIconsVue;
+
+const app = createApp({
   setup() {
-    const iframeUrl = ref('https://color-powder-app.streamlit.app/?tab=recipe');
+    const iframeUrl = ref('https://color-powder-app.streamlit.app/#recipe-table');
 
     const handleSelect = (index) => {
       switch(index){
-        case '1-1': iframeUrl.value = 'https://color-powder-app.streamlit.app/?tab=color-powder'; break;
-        case '2-1': iframeUrl.value = 'https://color-powder-app.streamlit.app/?tab=customer-list'; break;
-        case '2-2': iframeUrl.value = 'https://color-powder-app.streamlit.app/?tab=recipe'; break;
-        case '3-1': iframeUrl.value = 'https://color-powder-app.streamlit.app/?tab=production-order'; break;
-        case '3-2': iframeUrl.value = 'https://color-powder-app.streamlit.app/?tab=outsourcing'; break;
-        case '4-1': iframeUrl.value = 'https://color-powder-app.streamlit.app/?tab=inventory'; break;
-        case '5-1': iframeUrl.value = 'https://color-powder-app.streamlit.app/?tab=pantone-table'; break;
-        case '5-2': iframeUrl.value = 'https://color-powder-app.streamlit.app/?tab=cross-query'; break;
-        default: iframeUrl.value = 'https://color-powder-app.streamlit.app/?tab=recipe';
+        case '1-1': iframeUrl.value = 'https://color-powder-app.streamlit.app/#color-powder'; break;
+        case '2':   iframeUrl.value = 'https://color-powder-app.streamlit.app/#customer'; break;
+        case '3-1': iframeUrl.value = 'https://color-powder-app.streamlit.app/#customer-list'; break;
+        case '3-2': iframeUrl.value = 'https://color-powder-app.streamlit.app/#recipe'; break;
+        case '4-1': iframeUrl.value = 'https://color-powder-app.streamlit.app/#production-order'; break;
+        case '4-2': iframeUrl.value = 'https://color-powder-app.streamlit.app/#production-edit'; break;
+        case '4-3': iframeUrl.value = 'https://color-powder-app.streamlit.app/#outsourcing'; break;
+        case '5-1': iframeUrl.value = 'https://color-powder-app.streamlit.app/#initial-stock'; break;
+        case '5-2': iframeUrl.value = 'https://color-powder-app.streamlit.app/#usage-ranking'; break;
+        case '5-3': iframeUrl.value = 'https://color-powder-app.streamlit.app/#inventory'; break;
+        case '6': iframeUrl.value = 'https://color-powder-app.streamlit.app/#purchase'; break;
+        case '7': iframeUrl.value = 'https://color-powder-app.streamlit.app/#sales'; break;
+        case '8': iframeUrl.value = 'https://color-powder-app.streamlit.app/#accounting'; break;
+        case '9': iframeUrl.value = 'https://color-powder-app.streamlit.app/#hr'; break;
+        default: iframeUrl.value = 'https://color-powder-app.streamlit.app/#recipe-table';
       }
-    }
+    };
 
-    return { iframeUrl, handleSelect }
+    return { iframeUrl, handleSelect };
   }
-}).mount('#app');
+});
+
+// 註冊 Element Plus Icons
+for (const [key, component] of Object.entries(Icons)) {
+  app.component(key, component);
+}
+
+app.use(ElementPlus);
+app.mount('#app');
 </script>
 </body>
 </html>
